Fix line-height on IE and bigger form elements

--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -41,6 +41,7 @@ button, input, select, textarea {
     border: none;
     outline: none;
     margin: 0;
+    line-height: normal;
 }
 
 a {
